[gd_scene load_steps=11 format=3 uid="uid://bavgpxopiixer"]

[ext_resource type="Script" path="res://AreaSelectZone.gd" id="1_vpyhu"]
[ext_resource type="Texture2D" uid="uid://cuttvv8xdupei" path="res://Sprites/TileSets/Level_Goal.png" id="2_v1c02"]
[ext_resource type="Theme" uid="uid://ceqslen8rfbmx" path="res://GUI/Themes/UITheme.tres" id="3_ldlok"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_16knp"]
size = Vector2(48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4pur4"]
atlas = ExtResource("2_v1c02")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjhhu"]
atlas = ExtResource("2_v1c02")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1cr3"]
atlas = ExtResource("2_v1c02")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ytwqs"]
atlas = ExtResource("2_v1c02")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kut1r"]
atlas = ExtResource("2_v1c02")
region = Rect2(64, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_n5a2q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4pur4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjhhu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1cr3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ytwqs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kut1r")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="AreaSelectZone" type="Area2D"]
collision_layer = 0
collision_mask = 128
script = ExtResource("1_vpyhu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_16knp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_n5a2q")
autoplay = "default"

[node name="LevelIcon" type="Sprite2D" parent="."]
position = Vector2(0, -72)
region_rect = Rect2(0, 0, 64, 64)

[node name="LevelIconPanel" type="Panel" parent="."]
offset_left = 32.0
offset_top = -88.0
offset_right = 104.0
offset_bottom = -62.0

[node name="Label" type="Label" parent="LevelIconPanel"]
layout_mode = 0
offset_right = 72.0
offset_bottom = 26.0
theme = ExtResource("3_ldlok")
theme_override_colors/font_color = Color(0.878431, 0.643137, 0.431373, 1)
horizontal_alignment = 1
vertical_alignment = 1

[node name="GoLabel" type="Label" parent="."]
visible = false
offset_left = 40.0
offset_top = -48.0
offset_right = 80.0
offset_bottom = -25.0
theme = ExtResource("3_ldlok")
theme_override_colors/font_color = Color(0.878431, 0.643137, 0.431373, 1)
text = "GO!"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
